2010-05-07  Eli Zaretskii  <eliz@gnu.org>

	Fix the MS-DOS build, broken by autoconfiscation.

	* Makefile.in: Don't use Make-style comments past the "start of
	cpp stuff" line.
	(MSDOS_OBJ): Remove xmenu.o (it is now defined by XMENU_OBJ).

	* s/msdos.h (UNEXEC): Don't define (@unexec@ in Makefile.in is
	edited directly by msdos/sed1v2.inp).

2010-05-07  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (LD_SWITCH_SYSTEM): Set with configure, not cpp.
	(LD_SWITCH_SYSTEM_EXTRA): New variable, set by configure.
	(TEMACS_LDFLAGS): Use $LD_SWITCH_SYSTEM and $LD_SWITCH_SYSTEM_EXTRA,
	move out of cpp section.
	* s/freebsd.h (LD_SWITCH_SYSTEM):
	* s/gnu-linux.h (LD_SWITCH_SYSTEM):
	* s/netbsd.h (LD_SWITCH_SYSTEM):
	* s/openbsd.h (LD_SWITCH_SYSTEM): Move to configure.in.

2010-05-07  Dan Nicolaescu  <dann@ics.uci.edu>

	Define LIB_STANDARD and START_FILES using autoconf.
	* s/usg5-4.h (LIB_STANDARD):
	* s/netbsd.h (START_FILES):
	* s/irix6-5.h (LIB_STANDARD):
	* s/hpux10-20.h (LIB_STANDARD, START_FILES):
	* s/gnu-linux.h (START_FILES, LIB_STANDARD):
	* s/freebsd.h (START_FILES):
	* s/darwin.h (START_FILES):
	* s/cygwin.h (START_FILES):
	* s/aix4-2.h (LIB_STANDARD):
	* m/ibmrs6000.h (START_FILES): Remove, move logic to configure.in.
	* Makefile.in (STARTFILES): Rename to START_FILES, define using
	autoconf, not cpp.

2010-05-06  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove NEED_BSDTTY and NEED_UNISTD_H.
	* s/hpux10-20.h (NEED_BSDTTY): Remove.
	* s/aix4-2.h (NEED_UNISTD_H): Remove.
	* systty.h: Simplify conditionals for including <sys/bsdtty.h>,
	<sys/ptyio.h> and <unistd.h>.

	* emacs.c (main): Remove NO_DIR_LIBRARY conditional, unused.

	* Makefile.in (STARTFILES): Conditionally define to make the usage clear.
	* s/gnu.h (START_FILES): Remove empty definition.

2010-05-06  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (x_draw_image_relief): Move declaration of extra to beginning.

2010-05-06  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (CPP, LN_S): Remove unused variables.
